--- a/immutable_proto_generator/pubspec.yaml
+++ b/immutable_proto_generator/pubspec.yaml
@@ -1,15 +1,11 @@
 name: immutable_proto_generator
-description: A starting point for Dart libraries or applications.
-# version: 1.0.0
-# homepage: https://www.example.com
-# author: Jonas Wanke <contact@jonas-wanke.com>
+description: Dart packages for generating immutable classes from Protocol Buffers
+version: 0.0.1
+homepage: https://github.com/JonasWanke/immutable_proto/tree/master/immutable_proto_generator
+author: Jonas Wanke <contact@wanke.dev>
 
 environment:
   sdk: '>=2.5.0 <3.0.0'
 
-#dependencies:
-#  path: ^1.6.0
-
-dev_dependencies:
-  pedantic: ^1.8.0
-  test: ^1.6.0
+dependencies:
+  meta: ^1.1.7
