--- a/immutable_proto_generator/pubspec.yaml
+++ b/immutable_proto_generator/pubspec.yaml
@@ -8,4 +8,14 @@ environment:
   sdk: '>=2.5.0 <3.0.0'
 
 dependencies:
-  meta: ^1.1.7
+  analyzer: '>=0.27.1 < 1.0.0'
+  build: '>=0.12.0 <2.0.0'
+  source_gen: ^0.9.0
+  immutable_proto:
+    path: ../immutable_proto
+
+  protobuf: ^0.13.15
+  kt_dart: ^0.6.2
+
+dev_dependencies:
+  build_runner: '>=0.9.0 <1.6.7'
