--- a/immutable_proto_generator/pubspec.yaml
+++ b/immutable_proto_generator/pubspec.yaml
@@ -1,5 +1,5 @@
 name: immutable_proto_generator
-description: Dart packages for generating immutable classes from Protocol Buffers
+description: Automatically generates an immutable class for a ProtoBuf
 version: 0.0.1
 homepage: https://github.com/JonasWanke/immutable_proto/tree/master/immutable_proto_generator
 author: Jonas Wanke <contact@wanke.dev>
@@ -11,11 +11,7 @@ dependencies:
   analyzer: '>=0.27.1 < 1.0.0'
   build: '>=0.12.0 <2.0.0'
   source_gen: ^0.9.0
-  immutable_proto:
-    path: ../immutable_proto
-
-  protobuf: ^0.13.15
-  kt_dart: ^0.6.2
+  immutable_proto: ^0.0.1
 
 dev_dependencies:
   build_runner: '>=0.9.0 <1.6.7'
