--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -2,13 +2,14 @@ name: example
 description: Demonstrates how to use the immutable_proto plugin.
 
 environment:
-  sdk: '>=2.5.0 <3.0.0'
+  sdk: '>=2.2.2 <3.0.0'
 
 dependencies:
-  immutable_proto:
-    path: ../immutable_proto
+  protobuf: ^1.0.0
+  kt_dart: ^0.6.2
+  meta: ^1.1.7
+  immutable_proto: ^0.0.2
 
 dev_dependencies:
   build_runner: '>=0.9.0 <1.6.7'
-  immutable_proto_generator:
-    path: ../immutable_proto_generator
+  immutable_proto_generator: ^0.0.2
