--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Files and directories created by pub
 .dart_tool/
 .packages
-pubspeck.lock
+pubspec.lock
 
 # Conventional directory for build outputs
 build/
