--- a/immutable_proto_generator/pubspec.yaml
+++ b/immutable_proto_generator/pubspec.yaml
@@ -18,5 +18,10 @@ dependencies:
   meta: ^1.1.7
 
 dev_dependencies:
-  build_runner: '>=0.9.0 <1.6.7'
+  build_runner: '>=0.9.0 <1.8.0'
   pedantic: ^1.0.0
+
+  test: ^1.9.1
+  source_gen_test: ^0.1.0+5
+  build_test: ^0.10.9+1
+  fixnum: ^0.10.9
