--- a/immutable_proto/pubspec.yaml
+++ b/immutable_proto/pubspec.yaml
@@ -1,5 +1,5 @@
 name: immutable_proto
-description: Automatically generates an immutable class for a ProtoBuf
+description: Automatically generates immutable data classes for Protocol Buffer messages
 version: 0.0.5+1
 homepage: https://github.com/JonasWanke/immutable_proto/tree/master/immutable_proto
 author: Jonas Wanke <contact@wanke.dev>
