--- a/immutable_proto_generator/pubspec.yaml
+++ b/immutable_proto_generator/pubspec.yaml
@@ -8,8 +8,8 @@ environment:
   sdk: '>=2.2.2 <3.0.0'
 
 dependencies:
-  analyzer: '>=0.27.1 < 1.0.0'
-  build: '>=0.12.0 <2.0.0'
+  analyzer: 0.39.2+1
+  build: 1.2.2
   source_gen: ^0.9.0
   immutable_proto: ^0.0.5+1
 
@@ -18,5 +18,5 @@ dependencies:
   meta: ^1.1.7
 
 dev_dependencies:
-  build_runner: '>=0.9.0 <1.6.7'
+  # build_runner: '>=0.9.0 <1.6.7'
   pedantic: ^1.0.0
