--- a/immutable_proto_generator/pubspec.yaml
+++ b/immutable_proto_generator/pubspec.yaml
@@ -5,18 +5,18 @@ homepage: https://github.com/JonasWanke/immutable_proto/tree/master/immutable_pr
 author: Jonas Wanke <contact@wanke.dev>
 
 environment:
-  sdk: '>=2.2.2 <3.0.0'
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   analyzer: 0.39.2+1
   build: 1.2.2
   source_gen: ^0.9.0
   immutable_proto: ^0.0.5+1
+  dartx: ^0.2.0
 
   protobuf: ^1.0.0
-  kt_dart: ^0.6.2
   meta: ^1.1.7
 
 dev_dependencies:
-  # build_runner: '>=0.9.0 <1.6.7'
+  build_runner: ^1.8.1
   pedantic: ^1.0.0
