--- a/immutable_proto/example/pubspec.yaml
+++ b/immutable_proto/example/pubspec.yaml
@@ -1,5 +1,5 @@
 name: example
-description: Demonstrates how to use the immutable_proto plugin.
+description: Demonstrates how to use the immutable_proto package.
 
 environment:
   sdk: ">=2.2.2 <3.0.0"
@@ -7,9 +7,8 @@ environment:
 dependencies:
   protobuf: ^1.0.0
   meta: ^1.1.7
-  immutable_proto: ^0.0.5+1
+  immutable_proto: ^0.1.0
 
 dev_dependencies:
   build_runner: ^1.8.1
-  immutable_proto_generator:
-    path: ../../immutable_proto_generator
+  immutable_proto_generator: ^0.1.0
