--- a/immutable_proto/pubspec.yaml
+++ b/immutable_proto/pubspec.yaml
@@ -1,14 +1,13 @@
 name: immutable_proto
 description: Automatically generates immutable data classes for Protocol Buffer messages
-version: 0.0.5+1
+version: 0.1.0
 homepage: https://github.com/JonasWanke/immutable_proto/tree/master/immutable_proto
-author: Jonas Wanke <contact@wanke.dev>
 
 environment:
-  sdk: '>=2.2.2 <3.0.0'
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   meta: ^1.1.7
-  
+
 dev_dependencies:
   pedantic: ^1.0.0
