--- a/immutable_proto_generator/pubspec.yaml
+++ b/immutable_proto_generator/pubspec.yaml
@@ -1,8 +1,7 @@
 name: immutable_proto_generator
 description: Automatically generates immutable data classes for Protocol Buffer messages
-version: 0.0.5+1
+version: 0.1.0
 homepage: https://github.com/JonasWanke/immutable_proto/tree/master/immutable_proto_generator
-author: Jonas Wanke <contact@wanke.dev>
 
 environment:
   sdk: ">=2.2.2 <3.0.0"
@@ -11,7 +10,7 @@ dependencies:
   analyzer: 0.39.2+1
   build: 1.2.2
   source_gen: ^0.9.0
-  immutable_proto: ^0.0.5+1
+  immutable_proto: ^0.1.0
   dartx: ^0.2.0
 
   protobuf: ^1.0.0
